revert psr packages to stable versions

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     ],
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "repositories": [
         {
             "type": "path",
@@ -28,7 +29,11 @@
     "require": {
         "marshal/eventmanager": "dev-master",
         "marshal/logger": "dev-master",
-        "psr/http-message": "^2.0@dev",
-        "psr/http-client": "^1.0@dev"
+        "psr/http-message": "1.0",
+        "psr/http-client": "^1.0"
+    },
+    "scripts": {
+        "python": ". venv/bin/activate && python run.py",
+        "hypercorn": ". venv/bin/activate && hypercorn run.py"
     }
 }
