--- a/composer.json
+++ b/composer.json
@@ -20,17 +20,14 @@
         {
             "type": "path",
             "url": "../eventmanager"
-        },
-        {
-            "type": "path",
-            "url": "../logger"
         }
     ],
     "require": {
         "marshal/eventmanager": "dev-master",
         "psr/http-message": "2.0",
         "psr/http-client": "^1.0",
-        "psr/http-factory": "^1.1"
+        "psr/http-factory": "^1.1",
+        "psr/container": "^1.1"
     },
     "scripts": {
         "python": ". venv/bin/activate && python run.py",
